# raw2tmap

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-publish.yml  test.yml
raw2tmap/: __init__.py  __main__.py  model.py  raw2tmap.py
tests/: test_raw2tmap.py
