[metadata]
name = raw2tmap
url = https://github.com/TissUUmaps/raw2tmap
author = SciLifeLab BioImage Informatics Facility (BIIF)
author_email = biif@scilifelab.se
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Convert OME-NGFF to TMAP
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
install_requires =
    click
    ome-zarr
python_requires = >=3.9
packages = find:

[options.entry_points]
console_scripts =
    raw2tmap = raw2tmap.__main__:main
