[metadata]
name = raw2tmap
url = https://github.com/TissUUmaps/raw2tmap
author = SciLifeLab BioImage Informatics Facility (BIIF)
author_email = biif@scilifelab.se
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Convert OME-Zarr files to TMAP format
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown

[options]
install_requires =
    click
    ome-zarr
    pydantic>=2
    tifffile
    tqdm
python_requires = >=3.9
packages = find:

[options.entry_points]
console_scripts =
    raw2tmap = raw2tmap.__main__:main

[options.extras_require]
dzi =
    pyvips

[flake8]
max-line-length = 88
extend-ignore = E203
